# hodu_xla

./: .gitignore  Cargo.toml  README.md  build.rs
.github/workflows/: rust-ci.yml
builds/: BUILD  build.sh  xla_version
c/: xla_wrapper.cc  xla_wrapper.h
scripts/: build_helper.rs  install-linux-cuda.sh  install-windows-cuda.ps1  install.ps1  install.sh
src/: error.rs  npy.rs
src/wrappers/: literal.rs  mod.rs  pjrt_buffer.rs  pjrt_client.rs  pjrt_loaded_executable.rs  shape.rs  xla_builder.rs  xla_op.rs
tests/: basic_tests.rs  control_flow_tests.rs  conv_tests.rs  reduce_window_tests.rs  rev_tests.rs  scatter_tests.rs  tuple_tests.rs  type_tests.rs
xla_rs/: xla_rs.cc  xla_rs.h
