[package]
name = "hodu_xla"
version = "0.4.5"
authors = [
    "laurent <laurent.mazare@gmail.com>",
    "Han Damin <miniex@daminstudio.net>",
]
edition = "2021"
description = "Bindings for the XLA C++ library."
repository = "https://github.com/hodu-rs/hodu_xla"
keywords = ["blas", "tensor", "machine-learning"]
categories = ["science"]
license = "MIT/Apache-2.0"
readme = "README.md"

[features]
default = []

[dependencies]
libc = "0.2"
half = { version = "2.7.1", default-features = false, features = [
    "num-traits",
] }
num-traits = "0.2.19"
num-derive = "0.4.2"
zip = "6.0.0"

[build-dependencies]
bindgen = "0.72.1"
cc = "1.2.37"
